fixing tipo casos management

--- a/src/main/webapp/public/login.xhtml
+++ b/src/main/webapp/public/login.xhtml
@@ -59,10 +59,10 @@
                     <a href="http://www.godesk.cl" class="logo">
                           <p:graphicImage library="images" name="LogoGODesk.png" title="GoDesk"/>
                     </a> <!-- / .logo -->
-                    <a href="signup.xhtml" class="btn btn-warning">Registrarse</a>
+                    <a href="signup.xhtml" class="btn btn-warning">Registrate gratis</a>
                 </div> <!-- / .header -->
 
-                <h1 class="form-header">Inicia Sesión en GoDesk</h1>
+                <h1 class="form-header">Inicia Sesión en #{UserSessionBean.tenantId}</h1>
                 <!-- Form -->
                 <h:form id="form-signin" styleClass="panel">
                     
