--- a/src/main/webapp/customer/ticket.xhtml
+++ b/src/main/webapp/customer/ticket.xhtml
@@ -6,7 +6,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <f:event type="preRenderView" listener="#{loginCustomerController.checkAccessToCasosList}" />
+    <f:event type="preRenderView" listener="#{loginCustomerController.checkAccessToTicket}" />
 
     <ui:composition  template="/customer/template.xhtml">
         <ui:define name="page_content">     
