--- a/src/main/webapp/script/area/List.xhtml
+++ b/src/main/webapp/script/area/List.xhtml
@@ -147,7 +147,9 @@
                             <p:treeNode type="agentes" >  
                                 <i class="fa fa-user"></i>&nbsp;
                                 <p:commandLink ajax="false" action="#{usuarioController.prepareEdit(item)}" value="#{item.capitalName}"/>
-                                <i class="fa #{item.activo ? 'fa-check':'fa-times'}"></i>                                
+                                <i class="fa #{item.activo ? 'fa-check':'fa-times'}"></i> 
+                                <br/>&nbsp;#{item.email}
+                                
                             </p:treeNode>
                         </p:tree> 
                         <br/>
