chat with customers

--- a/src/main/webapp/customer/template.xhtml
+++ b/src/main/webapp/customer/template.xhtml
@@ -202,7 +202,7 @@
 
             <script type="text/javascript">
              //<![CDATA[
-                createChatHiddenFrame('#{UserSessionBean.current.idUsuario}', '#{applicationBean.companyName}');
+                createChatHiddenFrame('#{UserSessionBean.emailCliente.emailCliente}', '#{applicationBean.companyName}');
              //]]>
             </script>
 
