--- a/src/main/webapp/script/usuario/List.xhtml
+++ b/src/main/webapp/script/usuario/List.xhtml
@@ -13,7 +13,7 @@
         </ui:define>
         <ui:define name="help">
 
-            <h:outputText escape="false" value="#{bundle.ayudaUsuarios}"/>
+            <h:outputLabel escape="false" value="#{bundle.ayudaUsuarios}"/>
 
         </ui:define>
 
@@ -30,7 +30,7 @@
             <div class="page-header">
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
-                        <h1><i class="fa fa-key page-header-icon"></i>&nbsp;&nbsp;Usuarios</h1>
+                        <h1><i class="fa fa-user page-header-icon"></i>&nbsp;&nbsp;Usuarios</h1>
                         <p:commandLink title="Help" onclick="PF('helpDialog').show()" styleClass="text-info" >
                             <i class="fa fa-info-circle"/>
                         </p:commandLink> 
@@ -51,7 +51,7 @@
                                     <li>
                                         <h:commandLink action="#{usuarioController.prepareCreate}" 
                                                        value="#{bundle.ListUsuarioCreateLink}"
-                                     rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}">
+                                                       rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}">
                                         </h:commandLink>
                                     </li>
 
@@ -101,7 +101,7 @@
                         <p:column headerText="#{bundle.ListUsuarioTitle_nombres}" sortBy="#{item.nombres}">
                             <h:outputText value="#{item.capitalName}"/>
                         </p:column>
-                     
+
                         <p:column headerText="#{bundle.ListUsuarioTitle_email}" sortBy="#{item.email}">
 
                             <h:outputText value="#{item.email}"/>
@@ -133,26 +133,49 @@
                         </p:column>
 
                         <p:column headerText="Acción">
-                            <p:commandButton id="viewBtn" ajax="false" action="#{usuarioController.prepareView(item)}" disabled="#{not usuarioController.puedeEditar(item)}" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" title="Ver" icon="ui-icon ui-icon-document"/>
-                            <p:commandButton id="editBtn" ajax="false" action="#{usuarioController.prepareEdit(item)}" disabled="#{not usuarioController.puedeEditar(item)}" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" title="Editar" icon="ui-icon ui-icon-pencil"/>
-                            <p:commandButton id="showDialogButton" title="Eliminar" update=":form:confirmDialog" action="#{usuarioController.setSelected(item)}" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" oncomplete="PF('confirmation').show()" disabled="#{not usuarioController.puedeEditar(item)}" icon="ui-icon ui-icon-trash"/>
+                            <div align="center">
+                                <p:commandLink id="viewBtn" action="#{usuarioController.prepareView(item)}"
+                                               disabled="#{not usuarioController.puedeEditar(item)}"
+                                               rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"
+                                               title="Ver" ajax="false"
+                                               styleClass="btn btn-sm btn-outline btn-default"
+                                               >
+                                    <i class="fa fa-eye"/>
+                                </p:commandLink>
+                                <p:commandLink id="editBtn" action="#{usuarioController.prepareEdit(item)}"
+                                               title="Editar" ajax="false"
+                                               disabled="#{not usuarioController.puedeEditar(item)}"
+                                               rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"
+                                               styleClass="btn btn-sm btn-outline btn-primary"
+                                               >
+                                    <i class="fa fa-edit"/>
+                                </p:commandLink>
+                                <p:commandLink id="showDialogButton"
+                                               title="Eliminar"
+                                               update=":form:confirmDialog"
+                                               action="#{usuarioController.setSelected(item)}"
+                                               oncomplete="PF('confirmation').show()"
+                                               styleClass="btn btn-sm btn-outline btn-danger"
+                                               disabled="#{not usuarioController.puedeEditar(item)}"
+                                               rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"
+                                               >
+                                    <i class="fa fa-trash-o"/>
+                                </p:commandLink>
+                            </div>
+
                         </p:column>
-
-
                     </p:dataTable>
                 </h:panelGroup>
-
-
-
                 <p:dialog id="confirmDialog" showEffect="fade" hideEffect="fade" 
-                          header="Iniciando proceso de eliminación" widgetVar="confirmation" width="300">
+                          header="Iniciando proceso de eliminación" widgetVar="confirmation">
 
-                    <h:outputText value="Está seguro de eliminar el usuario #{usuarioController.selected.capitalName}?"/>
+                    <h:outputText value="Está seguro de eliminar el usuario  #{usuarioController.selected.capitalName}?"/>    
 
                     <f:facet name="footer">
-                        <p:commandButton id="confirm" value="#{bundle.yesDelete}" action="#{usuarioController.destroy()}" 
-                                         ajax="false"/>
-                        <p:commandButton id="decline" value="#{bundle.decline}" onclick="PF('confirmation').hide()" type="button" /> 
+                        <p:commandLink styleClass="btn btn-primary btn-flat" id="confirm" value="Si, Eliminar" actionListener="#{usuarioController.destroy()}" 
+                                       update=":form" oncomplete="PF('confirmation').hide()"/>&nbsp;&nbsp;
+
+                        <p:commandLink styleClass="btn btn-default btn-flat" id="decline" value="No, Cancelar" onclick="PF('confirmation').hide()" type="button" /> 
                     </f:facet>
 
                 </p:dialog>
